Added FilterDynamicHeating routines.

--- a/WindInWECAN.lyx
+++ b/WindInWECAN.lyx
@@ -4919,7 +4919,7 @@ status open
 
 Variance spectrum for the new vertical wind.
  Data from WECAN research flight 17, 18:26:00 -- 18:29:00.
- The spectrum for TASX is also shown as the green line.
+ The spectrum for TASX is also shown as the black line.
 \begin_inset Quotes erd
 \end_inset
 
